--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.7",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "typed.js": "^2.1.0"
